--- a/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.wav">
 
     <application
+        android:name="com.example.wav.AdvApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
