--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,15 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51"
 
         // 配置自动上传符号表插件，注：为了能快速并准确地定位用户APP发生Crash的代码位置，Bugly使用符号表对APP发生Crash的程序堆栈进行解析和还原
 //        classpath 'com.tencent.bugly:symtabfileuploader:1.3.9'
@@ -23,6 +26,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
     }
 }
