--- a/MvpModules/WanAndroidAdvance/build.gradle
+++ b/MvpModules/WanAndroidAdvance/build.gradle
@@ -79,7 +79,8 @@ dependencies {
 
     implementation rootProject.ext.ext_tools.utilcode
     implementation rootProject.ext.ext_tools.gson
-    implementation rootProject.ext.ext_tools.systembartint
+//    implementation rootProject.ext.ext_tools.systembartint
+    implementation rootProject.ext.ext_tools.barlibrary
 
     compile rootProject.ext.ext_tools.logger
     implementation rootProject.ext.ext_tools.fragmentation
