--- a/ext.gradle
+++ b/ext.gradle
@@ -141,6 +141,8 @@ project.ext {
 
             /*1.0.3无法 使用*/
             systembartint           : 'com.readystatesoftware.systembartint:systembartint:1.0.4',
+            barlibrary              : 'com.gyf.barlibrary:barlibrary:2.3.0',
+
             //otto
             otto                    : 'com.squareup:otto:1.3.8',
 
