--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Tue Apr 17 21:22:25 CST 2018
-systemProp.https.proxyPort=9666
-systemProp.http.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=9666
+#systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
-systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyHost=127.0.0.1
 org.gradle.parallel=true
-systemProp.http.proxyPort=9666
+#systemProp.http.proxyPort=9666
