--- a/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
 
         <activity android:name="com.example.wav.ui.activity.MainActivity" />
 
+        <activity android:name="com.example.wav.ui.activity.FilterActivity" />
+        <activity android:name="com.example.wav.ui.activity.DeviceListActivity" />
     </application>
 
 </manifest>
