--- a/ext.gradle
+++ b/ext.gradle
@@ -132,6 +132,12 @@ project.ext {
 
             RecyclerViewPager       : 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.2@aar',
 
+            SmartRefreshLayout      : "com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1",
+            SmartRefreshHeader      : "com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1",
+            banner                  : "com.youth.banner:banner:1.4.10",
+            FlycoTabLayout_Lib      : "com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar",
+            VerticalTabLayout       : "q.rorbin:VerticalTabLayout:1.2.5",
+
             // https://github.com/hongyangAndroid/FlowLayout
             flowlayout_lib          : 'com.hyman:flowlayout-lib:1.1.2',
 
