删除废弃的库工程

--- a/KotlinAppModules/wanandroidclient/build.gradle
+++ b/KotlinAppModules/wanandroidclient/build.gradle
@@ -43,5 +43,5 @@ dependencies {
 
     compile rootProject.ext.ext_tools.logger
 
-    compile project(':ZySdkLib')
+//    compile project(':ZySdkLib')
 }
