--- a/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ui.activity.ApiTestActivity" />
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.NewHomeActivity" />
+        <activity android:name=".ui.activity.FilterNewActivity" />
     </application>
 
 </manifest>
