--- a/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.NewHomeActivity" />
         <activity android:name=".ui.activity.FilterNewActivity" />
+        <activity android:name=".ui.activity.NewFilterActivity" />
     </application>
 
 </manifest>
