代码逻辑调整,移除测试数据

--- a/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ui.activity.NewHomeActivity" />
         <activity android:name=".ui.activity.FilterNewActivity" />
         <activity android:name=".ui.activity.NewFilterActivity" />
+        <activity android:name=".ui.activity.DeviceRegActivity" />
     </application>
 
 </manifest>
