--- a/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".ui.activity.FilterNewActivity" />
         <activity android:name=".ui.activity.NewFilterActivity" />
         <activity android:name=".ui.activity.DeviceRegActivity" />
+        <activity android:name=".ui.activity.AccountRegActivity" />
     </application>
 
 </manifest>
