--- a/MvpModules/DaggerWanAndroid/build.gradle
+++ b/MvpModules/DaggerWanAndroid/build.gradle
@@ -58,7 +58,7 @@ android {
 greendao {
     schemaVersion 1
     targetGenDir 'src/main/java'
-    daoPackage 'com.example.wav.core.dao'
+    daoPackage 'com.example.daw.dao'
 }
 
 dependencies {
@@ -112,7 +112,9 @@ dependencies {
     annotationProcessor rootProject.ext.ext_tools.dagger_compiler
     annotationProcessor rootProject.ext.ext_tools.dagger_android_processor
 
-    compile project(':ZySdkLib')
+//    compile project(':ZySdkLib')
+
+    implementation 'com.github.syusikoku:ZYSdk:v1.0.11'
 }
 
 //解决支持库版本不兼容问题
