--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
-include ':ZySdkLib'
+//include ':ZySdkLib', ':ZhyAutoLayout'
 //project(':ZySdkLib').projectDir = new File('../ZYMobileSdk/SDKLibrary')
-project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
+//project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
-loadLibs()
+//loadLibs()
 //loadAppModule()
 //loadComponentLenarnModule()
 //loadDatasturectureModule()
