--- a/MvpModules/DaggerWanAndroid/src/main/AndroidManifest.xml
+++ b/MvpModules/DaggerWanAndroid/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.daw">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".DawApp"
         android:allowBackup="true"
@@ -11,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".WelcomeActivity"
+            android:name=".ui.activity.WelcomeActivity"
             android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,11 +22,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.activity.LoginActivity"
             android:theme="@style/AppTheme.FullScreen" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".ui.activity.RegisterActivity"
             android:theme="@style/AppTheme.FullScreen" />
+
+        <activity android:name=".ui.activity.MainActivity" />
     </application>
 
 </manifest>
