--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -32,6 +32,7 @@ private void loadAppModules() {
 //    include ':AppModules:JDStore'
 //    include ':AppModules:TakeWay'
 //    include ':AppModules:FaceApp'
+    include ':AppModules:DaggerDemo'
 //    include ':AppModules:FaceHelper'
 }
 
