--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ include ':ZySdkLib'
 project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
 //loadLibs()
-//loadAppModule()
+loadAppModule()
 //loadComponentLenarnModule()
 //loadDatasturectureModule()
 //loadDesignpatternModule()
@@ -17,4 +17,4 @@ project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 //loadKotlinModule()
 //loadGithubLib()
 //loadToolAppModule()
-loadMvpModule()
+//loadMvpModule()
