--- a/ext.gradle
+++ b/ext.gradle
@@ -107,6 +107,9 @@ project.ext {
 
             /*图表控件*/
             MPAndroidChart          : 'com.github.PhilJay:MPAndroidChart:v3.0.3',
+            hwc_chart               : 'me.hwc:chart:1.0.2',
+
+
 
             fragmentation           : 'me.yokeyword:fragmentation:0.7.10',
 
