--- a/AppModules/DaggerDemo/build.gradle
+++ b/AppModules/DaggerDemo/build.gradle
@@ -116,7 +116,18 @@ dependencies {
     annotationProcessor rootProject.ext.ext_tools.dagger_compiler
     annotationProcessor rootProject.ext.ext_tools.dagger_android_processor
 
+    /*仿ios侧滑返回*/
+//    compile 'com.jude:swipebackhelper:3.1.2'
+//    compile 'com.github.razerdp:BasePopup:1.9.4'
+//    implementation 'com.orhanobut:dialogplus:1.11@aar'
+//    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
+    compile 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.2.1'
+
+    /*mavenCentral()*/
+//    compile 'cn.pedant.sweetalert:library:1.3'
     compile project(':ZySdkLib')
+    compile project(':LibModules:CommonAlertPop')
 }
 
 //解决支持库版本不兼容问题
