刷新问题修复

--- a/AppModules/DaggerDemo/src/main/AndroidManifest.xml
+++ b/AppModules/DaggerDemo/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".ui.activity.DeviceDetailActivity" />
         <activity android:name=".ui.activity.sample.SampleMPAndroidChartActivity" />
         <activity android:name=".ui.activity.FilterTestActivity" />
+        <activity android:name=".sample.SmartRefreshLayoutTestActivity" />
     </application>
 
 </manifest>
