--- a/AppModules/DaggerDemo/build.gradle
+++ b/AppModules/DaggerDemo/build.gradle
@@ -124,6 +124,12 @@ dependencies {
 
     compile 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.2.1'
 
+    //SmartRefreshLayout
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+
+    compile 'com.github.fangx:haorefresh:1.0'
+
     /*mavenCentral()*/
 //    compile 'cn.pedant.sweetalert:library:1.3'
     compile project(':ZySdkLib')
