--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
-include ':ZySdkLib'
+include ':ZySdkLib', ':VideoPlayers'
 //project(':ZySdkLib').projectDir = new File('../ZYMobileSdk/SDKLibrary')
 project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
