--- a/VideoPlayers/build.gradle
+++ b/VideoPlayers/build.gradle
@@ -1,36 +1,148 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-
-
+    compileSdkVersion rootProject.ext._android.compileSdkVersion
 
     defaultConfig {
         applicationId "com.example.player"
-        minSdkVersion 19
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-
+        minSdkVersion rootProject.ext._android.minSdkVersion
+        targetSdkVersion rootProject.ext._android.targetSdkVersion
+        versionCode rootProject.ext._android.versionCode
+        versionName rootProject.ext._android.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        vectorDrawables.useSupportLibrary = true
+
+        renderscriptTargetApi 21
+        renderscriptSupportModeEnabled true    // Enable RS support
+        multiDexEnabled true
+
+        javaCompileOptions {
+            annotationProcessorOptions.includeCompileClasspath = true
+        }
+
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
+        }
 
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled false // 是否混淆
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false // 是否混淆
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+
+    flavorDimensions "code"
+    productFlavors {
+    }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
+
+    dexOptions {
+        jumboMode true
+        javaMaxHeapSize "4g"
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation rootProject.ext.support.appcompat
+    implementation rootProject.ext.support.constraint_layout
+    implementation rootProject.ext.support.design
+    implementation rootProject.ext.support.cardview
+    testImplementation rootProject.ext.support.junit
+    androidTestImplementation rootProject.ext.support.test_runner
+    androidTestImplementation(rootProject.ext.support.espresso_core, {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation rootProject.ext.ext_tools.multidex
+
+    /*butternife*/
+    implementation rootProject.ext.ext_tools.butterknife
+    annotationProcessor rootProject.ext.ext_tools.butterknife_compiler
+
+    implementation rootProject.ext.ext_tools.utilcode
+    implementation rootProject.ext.ext_tools.gson
+    implementation rootProject.ext.ext_tools.barlibrary
+
+    compile rootProject.ext.ext_tools.logger
+    implementation rootProject.ext.ext_tools.fragmentation
+    implementation rootProject.ext.ext_tools.BaseRecyclerViewAdapter
+    implementation rootProject.ext.ext_tools.ringprogressbar
+
+    implementation rootProject.ext.ext_tools.MPAndroidChart
+
+    implementation rootProject.ext.ext_tools.glide
+    annotationProcessor rootProject.ext.ext_tools.glide_compiler
+
+    implementation rootProject.ext.ext_tools.rxjava
+    implementation rootProject.ext.ext_tools.rxandroid
+    implementation rootProject.ext.ext_tools.retrofit
+    implementation rootProject.ext.ext_tools.converter_gson
+    implementation rootProject.ext.ext_tools.adapter_rxjava2
+    implementation rootProject.ext.ext_tools.converter_scalars
+    implementation rootProject.ext.ext_tools.okhttp
+    implementation rootProject.ext.ext_tools.logging_interceptor
+
+    implementation rootProject.ext.ext_tools.agentweb
+    implementation rootProject.ext.ext_tools.flowlayout_lib
+    implementation rootProject.ext.ext_tools.VerticalTabLayout
+
+    implementation rootProject.ext.ext_tools.dagger
+    implementation rootProject.ext.ext_tools.dagger_android
+    implementation rootProject.ext.ext_tools.dagger_android_support
+    annotationProcessor rootProject.ext.ext_tools.dagger_compiler
+    annotationProcessor rootProject.ext.ext_tools.dagger_android_processor
+
+    compile 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.2.1'
+
+    //SmartRefreshLayout
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+
+    compile 'com.github.fangx:haorefresh:1.0'
+
+    compile 'com.github.czy1121:loadinglayout:1.0.1'
+
+    compile project(':ZySdkLib')
+
+    /*视频播放器*/
+    implementation rootProject.ext.ext_tools.GSYVideoPlayer
+    implementation rootProject.ext.ext_tools.exoplayer
+
+}
+
+//解决支持库版本不兼容问题
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                //  不要设置太高，26以上的版本会出现问题
+                details.useVersion '25.3.0'
+            }
+        }
+    }
 }
