--- a/AppModules/DaggerDemo/build.gradle
+++ b/AppModules/DaggerDemo/build.gradle
@@ -148,6 +148,8 @@ dependencies {
     compile 'com.tencent.xinge:xinge:3.1.2-beta'
     compile 'com.tencent.wup:wup:1.0.0.E-alpha'
     compile 'com.tencent.mid:mid:3.9.0-alpha'
+
+    compile 'com.contrarywind:Android-PickerView:4.1.3'
 }
 
 //解决支持库版本不兼容问题
