--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,10 @@ buildscript {
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.10"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51"
 
         // 配置自动上传符号表插件，注：为了能快速并准确地定位用户APP发生Crash的代码位置，Bugly使用符号表对APP发生Crash的程序堆栈进行解析和还原
-//        classpath 'com.tencent.bugly:symtabfileuploader:1.3.9'
+        classpath 'com.tencent.bugly:symtabfileuploader:1.3.9'
     }
 }
 
