--- a/ext.gradle
+++ b/ext.gradle
@@ -48,7 +48,8 @@ project.ext {
     ]
 
     def daggerLibVersion = "2.11", retrofitLiVersion = "2.3.0", okhttpLibVersion = '3.9.1',
-        gms = "11.8.0", google_play_services_client_library_version = "7.0.0"
+        gms = "11.8.0", google_play_services_client_library_version = "7.0.0", smartrefreshVersion = '1.0.5.1',
+    tablayoutVersion = '2.1.2@aar', verticalTabLayoutVersion = '1.2.5'
     /*扩展工具*/
     ext_tools = [
             /*rx*/
@@ -128,13 +129,16 @@ project.ext {
             jsoup                   : 'org.jsoup:jsoup:1.10.3',
 
             BaseRecyclerViewAdapter : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.12',
-            haorefresh              : 'com.github.fangx:haorefresh:1.0',
             indicatorseekbar        : 'com.github.warkiz.widget:indicatorseekbar:1.2.5',
 
             RecyclerViewPager       : 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.2@aar',
+            //SmartRefreshLayout
+            SmartRefreshLayout              : "com.scwang.smartrefresh:SmartRefreshLayout:$smartrefreshVersion",
+            SmartRefreshHeader              : "com.scwang.smartrefresh:SmartRefreshHeader:$smartrefreshVersion",
 
-            SmartRefreshLayout      : "com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1",
-            SmartRefreshHeader      : "com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1",
+            haorefresh                      : 'com.github.fangx:haorefresh:1.0',
+            loadinglayout                   : 'com.github.czy1121:loadinglayout:1.0.1',
+
             banner                  : "com.youth.banner:banner:1.4.10",
             FlycoTabLayout_Lib      : "com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar",
             VerticalTabLayout       : "q.rorbin:VerticalTabLayout:1.2.5",
