--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,10 @@
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
-include ':ZySdkLib', ':VideoPlayers'
+include ':ZySdkLib'
+//, ':VideoPlayers'
 //project(':ZySdkLib').projectDir = new File('../ZYMobileSdk/SDKLibrary')
 project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
-loadLibs()
+//loadLibs()
 loadAppModule()
 //loadComponentLenarnModule()
 //loadDatasturectureModule()
