智能家居项目创建

--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -32,6 +32,7 @@ private void loadAppModules() {
 //    include ':AppModules:TakeWay'
 //    include ':AppModules:FaceApp'
 //    include ':AppModules:FaceHelper'
+    include ':AppModules:SmartHome'
 }
 
 private void loadComponentLenarnModules() {
