--- a/KotlinAppModules/Fasthub/build.gradle
+++ b/KotlinAppModules/Fasthub/build.gradle
@@ -1,6 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'org.greenrobot.greendao'
+
+// 注：需要配置符号表时，使用bugly插件
+apply plugin: 'bugly'
+bugly {
+    appId = ''
+    appKey = ''
+}
+
 
 android {
     compileSdkVersion rootProject.ext._android.compileSdkVersion
@@ -11,38 +20,163 @@ android {
         targetSdkVersion rootProject.ext._android.targetSdkVersion
         versionCode rootProject.ext._android.versionCode
         versionName rootProject.ext._android.versionName
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        vectorDrawables.useSupportLibrary = true
+
+        renderscriptTargetApi 21
+        renderscriptSupportModeEnabled true    // Enable RS support
+        multiDexEnabled false
+
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'armeabi', 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
+
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled false // 是否混淆
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
+
+    flavorDimensions "code"
+    productFlavors {
+    }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
+
+    dexOptions {
+        jumboMode true
+        javaMaxHeapSize "4g"
+    }
+
+}
+
+greendao {
+    schemaVersion 1
+    targetGenDir 'src/main/java'
+    daoPackage 'com.example.fasthub.dao'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation rootProject.ext.support.appcompat
     implementation rootProject.ext.support.constraint_layout
     implementation rootProject.ext.support.design
-    implementation rootProject.ext.support.constraint_layout
+    implementation rootProject.ext.support.cardview
     testImplementation rootProject.ext.support.junit
     androidTestImplementation rootProject.ext.support.test_runner
-    androidTestImplementation rootProject.ext.support.espresso_core
+    androidTestImplementation(rootProject.ext.support.espresso_core, {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.51"
 
     /*butternife*/
     implementation rootProject.ext.ext_tools.butterknife
     annotationProcessor rootProject.ext.ext_tools.butterknife_compiler
 
+
+    implementation rootProject.ext.ext_tools.glide
+    annotationProcessor rootProject.ext.ext_tools.glide_compiler
+
+    implementation rootProject.ext.ext_tools.rxjava
+    implementation rootProject.ext.ext_tools.rxandroid
+    implementation rootProject.ext.ext_tools.retrofit
+    implementation rootProject.ext.ext_tools.converter_gson
+    implementation rootProject.ext.ext_tools.adapter_rxjava2
+    implementation rootProject.ext.ext_tools.converter_scalars
+    implementation rootProject.ext.ext_tools.okhttp
+    implementation rootProject.ext.ext_tools.logging_interceptor
+
+    implementation rootProject.ext.ext_tools.dagger
+    implementation rootProject.ext.ext_tools.dagger_android
+    implementation rootProject.ext.ext_tools.dagger_android_support
+    annotationProcessor rootProject.ext.ext_tools.dagger_compiler
+    annotationProcessor rootProject.ext.ext_tools.dagger_android_processor
+
+    // 其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.7
+    // (注：从2.1.5开始要分开Bugly SDK和NDK的配置）
+    implementation 'com.tencent.bugly:crashreport:latest.release'
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+
+//    implementation rootProject.ext.ext_tools.Android_PickerView
+//    implementation rootProject.ext.ext_tools.wheelview
+
     implementation rootProject.ext.ext_tools.utilcode
     implementation rootProject.ext.ext_tools.gson
+    implementation rootProject.ext.ext_tools.barlibrary
 
     compile rootProject.ext.ext_tools.logger
+    implementation rootProject.ext.ext_tools.fragmentation
+    implementation rootProject.ext.ext_tools.BaseRecyclerViewAdapter
 
-    compile 'com.github.syusikoku:ZYSdk:v1.0.0'
+    implementation "com.github.githubwing:ByeBurger:1.2.3"
+
+    implementation rootProject.ext.ext_tools.systembartint
+
+    implementation rootProject.ext.ext_tools.eventbus
+
+    //SmartRefreshLayout
+    implementation rootProject.ext.ext_tools.SmartRefreshLayout
+    implementation rootProject.ext.ext_tools.SmartRefreshHeader
+
+    implementation rootProject.ext.ext_tools.loadinglayout
+
+    implementation rootProject.ext.ext_tools.lottie
+
+    implementation rootProject.ext.ext_tools.multidex
+
+    implementation rootProject.ext.ext_tools.sak
+
+//    debugImplementation rootProject.ext.ext_tools.uetool
+//    releaseImplementation rootProject.ext.ext_tools.uetool_no_op
+//    debugImplementation rootProject.ext.ext_tools.uetool_fresco
+//
+//    debugImplementation rootProject.ext.ext_tools.blockcanary_android
+//    releaseImplementation rootProject.ext.ext_tools.blockcanary_no_op
+//
+//    debugImplementation rootProject.ext.ext_tools.leakcanary_android
+//    releaseImplementation rootProject.ext.ext_tools.release_leakcanary_android_no_op
+//    testImplementation rootProject.ext.ext_tools.test_leakcanary_android_no_op
+
+    implementation rootProject.ext.ext_tools.vlayout
+    implementation rootProject.ext.ext_tools.agentweb
+    implementation rootProject.ext.ext_tools.flowlayout_lib
+    implementation rootProject.ext.ext_tools.VerticalTabLayout
+
+    implementation project(':ZySdkLib')
+}
+
+//解决支持库版本不兼容问题
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                //  不要设置太高，26以上的版本会出现问题
+                details.useVersion '25.3.0'
+            }
+        }
+    }
 }
