--- a/AppModules/SampleSmartHome/src/main/AndroidManifest.xml
+++ b/AppModules/SampleSmartHome/src/main/AndroidManifest.xml
@@ -16,13 +16,22 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name="com.example.sash.MainActivity">
+		<activity
+			android:name=".ui.activity.AppMainActivity"
+			android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		
+		<activity
+			android:name=".ui.activity.SampleBluetoothActivity"
+			android:screenOrientation="portrait" />
+		<activity
+			android:name=".ui.activity.SampleWifiActivity"
+			android:screenOrientation="portrait" />
 	</application>
 
 </manifest>
