--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -29,7 +29,7 @@ private void loadAppModules() {
 //    include ':AppModules:FaceApp'
 //    include ':AppModules:FaceHelper'
     include ':AppModules:Mobike'
-    include ':AppModules:SmartHome'
+    include ':AppModules:SmartHomeHE'
     include ':AppModules:SampleSmartHome'
 }
 
