--- a/ext.gradle
+++ b/ext.gradle
@@ -49,7 +49,7 @@ project.ext {
 
     def daggerLibVersion = "2.11", retrofitLiVersion = "2.3.0", okhttpLibVersion = '3.9.1',
         gms = "11.8.0", google_play_services_client_library_version = "7.0.0", smartrefreshVersion = '1.0.5.1',
-    tablayoutVersion = '2.1.2@aar', verticalTabLayoutVersion = '1.2.5'
+        tablayoutVersion = '2.1.2@aar', verticalTabLayoutVersion = '1.2.5'
     /*扩展工具*/
     ext_tools = [
             /*rx*/
@@ -133,11 +133,11 @@ project.ext {
 
             RecyclerViewPager       : 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.2@aar',
             //SmartRefreshLayout
-            SmartRefreshLayout              : "com.scwang.smartrefresh:SmartRefreshLayout:$smartrefreshVersion",
-            SmartRefreshHeader              : "com.scwang.smartrefresh:SmartRefreshHeader:$smartrefreshVersion",
+            SmartRefreshLayout      : "com.scwang.smartrefresh:SmartRefreshLayout:$smartrefreshVersion",
+            SmartRefreshHeader      : "com.scwang.smartrefresh:SmartRefreshHeader:$smartrefreshVersion",
 
-            haorefresh                      : 'com.github.fangx:haorefresh:1.0',
-            loadinglayout                   : 'com.github.czy1121:loadinglayout:1.0.1',
+            haorefresh              : 'com.github.fangx:haorefresh:1.0',
+            loadinglayout           : 'com.github.czy1121:loadinglayout:1.0.1',
 
             banner                  : "com.youth.banner:banner:1.4.10",
             FlycoTabLayout_Lib      : "com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar",
@@ -176,24 +176,23 @@ project.ext {
 
             exoplayer               : 'com.google.android.exoplayer:exoplayer:2.7.3',
 
-
             /*GSYVideoPlayer*/
             /*完整版引入*/
-            GSYVideoPlayer :'com.shuyu:GSYVideoPlayer:4.1.2',
+            GSYVideoPlayer          : 'com.shuyu:GSYVideoPlayer:4.1.2',
 
             /*添加java和你想要的so支持：*/
-            gsyVideoPlayer_java :'com.shuyu:gsyVideoPlayer-java:4.1.2',
+            gsyVideoPlayer_java     : 'com.shuyu:gsyVideoPlayer-java:4.1.2',
 
-            gsyVideoPlayer_armv5 :'com.shuyu:gsyVideoPlayer-armv5:4.1.2',
-            gsyVideoPlayer_armv7a :'com.shuyu:gsyVideoPlayer-armv7a:4.1.2',
-            gsyVideoPlayer_arm64 :'com.shuyu:gsyVideoPlayer-arm64:4.1.2',
-            gsyVideoPlayer_x64 :'com.shuyu:gsyVideoPlayer-x64:4.1.2',
-            gsyVideoPlayer_x86 :'com.shuyu:gsyVideoPlayer-x86:4.1.2',
+            gsyVideoPlayer_armv5    : 'com.shuyu:gsyVideoPlayer-armv5:4.1.2',
+            gsyVideoPlayer_armv7a   : 'com.shuyu:gsyVideoPlayer-armv7a:4.1.2',
+            gsyVideoPlayer_arm64    : 'com.shuyu:gsyVideoPlayer-arm64:4.1.2',
+            gsyVideoPlayer_x64      : 'com.shuyu:gsyVideoPlayer-x64:4.1.2',
+            gsyVideoPlayer_x86      : 'com.shuyu:gsyVideoPlayer-x86:4.1.2',
 
             /*支持其他格式协议的（mpeg，rtsp, concat、crypto协议）*/
             /*A、B普通版本支持263/264/265等，对于mpeg编码会有声音无画面情况。 C 引入的so支持mpeg编码和其他补充协议，但是so包相对变大。*/
-            gsyVideoPlayer_java :'com.shuyu:gsyVideoPlayer-java:4.1.2',
-            gsyVideoPlayer_ex_so: 'com.shuyu:gsyVideoPlayer-ex_so:4.1.2',
+            gsyVideoPlayer_java     : 'com.shuyu:gsyVideoPlayer-java:4.1.2',
+            gsyVideoPlayer_ex_so    : 'com.shuyu:gsyVideoPlayer-ex_so:4.1.2',
 
             material_dialogs        : 'com.afollestad.material-dialogs:commons:0.9.0.2',
             NiceDialog              : 'com.github.Othershe:NiceDialog:1.1.4',
@@ -214,9 +213,14 @@ project.ext {
 
             /*Android屏幕适配方案*/
             autolayout              : 'com.zhy:autolayout:1.4.5',
-            screenadaptation        : 'me.yatoooon:screenadaptation:1.0.9'
+            screenadaptation        : 'me.yatoooon:screenadaptation:1.0.9',
 
-
+            //sugerORM框架
+            sugerORM                : 'com.github.satyan:sugar:1.5',
+            //popWindow
+            BasePopup               : 'com.github.razerdp:BasePopup:1.8.1',
+            //SwitchButton
+            switch_button           : 'com.github.zcweng:switch-button:0.0.3@aar'
     ]
 }
 
