--- a/AppModules/SampleSmartHome/src/main/AndroidManifest.xml
+++ b/AppModules/SampleSmartHome/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	
 	<application
 		android:name="com.example.sash.SampleApp"
 		android:allowBackup="true"
