推荐列表功能实现

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ org.gradle.jvmargs=-Xmx1536m
 #systemProp.https.proxyHost=127.0.0.1
 org.gradle.parallel=true
 #systemProp.http.proxyPort=9666
+android.useDeprecatedNdk=true
