--- a/MvpModules/Bailan/build.gradle
+++ b/MvpModules/Bailan/build.gradle
@@ -3,6 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.jakewharton.butterknife'
+// 注：需要配置符号表时，使用bugly插件
+apply plugin: 'bugly'
+bugly {
+    appId = 'fd0f6d1eae'
+    appKey = '416fd455-7cc4-4e6b-9d61-3471adcddda4'
+}
 
 android {
     compileSdkVersion rootProject.ext._android.compileSdkVersion
@@ -24,7 +30,7 @@ android {
         ndk {
             //设置支持的SO库架构
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86', 'x86_64', 'mips', 'mips64'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
         }
 
     }
@@ -125,6 +131,11 @@ dependencies {
 
 
     compile project(':ZySdkLib')
+
+    // 其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.7
+    // (注：从2.1.5开始要分开Bugly SDK和NDK的配置）
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
 
 //解决支持库版本不兼容问题
