--- a/MvpModules/Bailan/src/main/AndroidManifest.xml
+++ b/MvpModules/Bailan/src/main/AndroidManifest.xml
@@ -6,6 +6,13 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	
+	<!--bugly配置权限start-->
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.READ_LOGS" />
+	<!--bugly配置权限end-->
+	
 	<application
 		android:name=".BLApp"
 		android:allowBackup="true"
@@ -25,6 +32,7 @@
 			</intent-filter>
 		</activity>
 		<activity android:name=".ui.activity.MainActivity" />
+		
 	</application>
 
 </manifest>
