--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -49,7 +49,8 @@ private void loadToolAppModule() {
     project(":ToolAppModule").projectDir = file
 //    include ':ToolAppModule:FileTransferAssistant'
 //    include ':ToolAppModule:HardwareAssistant'
-    include ':ToolAppModule:SDKLibTestApp'
+//    include ':ToolAppModule:SDKLibTestApp'
+    include ':ToolAppModule:VideoRecorder'
 //    include ':ToolAppModule:BitmapAssistant'
 //    include ':ToolAppModule:NetworkDebugger'
 }
@@ -152,6 +153,8 @@ private void loadMvpModules() {
 //    include ':MvpModules:WanAndroid'
 //    include ':MvpModules:DaggerWanAndroid'
     include ':MvpModules:Bailan'
+//    include ':MvpModules:DailyNews'
+//    include ':MvpModules:VideoWorld'
 }
 
 ext {
