--- a/MvpModules/Bailan/src/main/AndroidManifest.xml
+++ b/MvpModules/Bailan/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.READ_LOGS" />
 	<!--bugly配置权限end-->
-	
+
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+
 	<application
 		android:name=".BLApp"
 		android:allowBackup="true"
