--- a/ToolAppModule/VideoRecorder/build.gradle
+++ b/ToolAppModule/VideoRecorder/build.gradle
@@ -1,17 +1,33 @@
 apply plugin: 'com.android.application'
+// 注：需要配置符号表时，使用bugly插件
+apply plugin: 'bugly'
+bugly {
+    appId = '89219542c1'
+    appKey = '20e5c64c-8fc7-41fe-9184-4a7975362b23'
+}
 
 android {
     compileSdkVersion rootProject.ext._android.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.example.smarthome"
-        minSdkVersion rootProject.ext._android.minSdkVersion
+        applicationId "com.example.vrec"
+        minSdkVersion 16
         targetSdkVersion rootProject.ext._android.targetSdkVersion
         versionCode rootProject.ext._android.versionCode
         versionName rootProject.ext._android.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
+
+        renderscriptTargetApi 21
+        renderscriptSupportModeEnabled true    // Enable RS support
+        multiDexEnabled true
+
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'armeabi', 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
+
     }
 
     buildTypes {
@@ -38,6 +54,12 @@ android {
         jumboMode true
         javaMaxHeapSize "4g"
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
@@ -48,15 +70,20 @@ dependencies {
     implementation rootProject.ext.support.cardview
     testImplementation rootProject.ext.support.junit
     androidTestImplementation rootProject.ext.support.test_runner
-    androidTestImplementation rootProject.ext.support.espresso_core
+    androidTestImplementation(rootProject.ext.support.espresso_core, {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+    implementation rootProject.ext.ext_tools.multidex
 
     /*butternife*/
     implementation rootProject.ext.ext_tools.butterknife
     annotationProcessor rootProject.ext.ext_tools.butterknife_compiler
 
     implementation rootProject.ext.ext_tools.utilcode
-    implementation rootProject.ext.ext_tools.gson
+
     implementation rootProject.ext.ext_tools.systembartint
+    implementation rootProject.ext.ext_tools.barlibrary
 
     compile rootProject.ext.ext_tools.logger
     implementation rootProject.ext.ext_tools.fragmentation
@@ -65,10 +92,12 @@ dependencies {
     annotationProcessor rootProject.ext.ext_tools.glide_compiler
 
     compile project(':ZySdkLib')
-}
 
-repositories {
-    mavenCentral()
+    // 其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.7
+    // (注：从2.1.5开始要分开Bugly SDK和NDK的配置）
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+
 }
 
 //解决支持库版本不兼容问题
