--- a/ToolAppModule/VideoRecorder/src/main/AndroidManifest.xml
+++ b/ToolAppModule/VideoRecorder/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".CaptureActivity"/>
+
+        <activity android:name=".VideoRecordActivity"/>
+
     </application>
 
 </manifest>
