--- a/ToolAppModule/VideoRecorder/src/main/AndroidManifest.xml
+++ b/ToolAppModule/VideoRecorder/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.vrec">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-feature
+            android:name="android.hardware.camera"
+            android:required="false"/>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
             android:name=".VideoRecApp"
             android:allowBackup="true"
@@ -10,7 +22,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -18,9 +30,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CaptureActivity"/>
+        <activity android:name=".activity.CaptureActivity"/>
 
-        <activity android:name=".VideoRecordActivity"/>
+        <activity android:name=".activity.VideoRecordActivity"/>
+
+        <activity android:name=".activity.Camera2VideoRecordActivity"/>
+
+        <activity android:name=".activity.CameraVideoRecordActivity"
+                />
 
     </application>
 
