--- a/ToolAppModule/VideoRecorder/src/main/AndroidManifest.xml
+++ b/ToolAppModule/VideoRecorder/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+    <uses-feature
+            android:name="android.hardware.camera.autofocus"
+            android:required="true"/>
+
+    <uses-feature android:name="android.hardware.camera.flash" />
+
     <application
             android:name=".VideoRecApp"
             android:allowBackup="true"
@@ -36,8 +42,9 @@
 
         <activity android:name=".activity.SurfaceViewVideoRecordActivity"/>
 
-        <activity android:name=".activity.TextureViewVideoRecordActivity"
-                />
+        <activity android:name=".activity.TextureViewVideoRecordActivity"/>
+
+        <activity android:name=".activity.VideoPlayerActivity"/>
 
     </application>
 
