--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,4 @@ project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 //loadKotlinModule()
 //loadGithubLib()
 loadToolAppModule()
-loadMvpModule()
+//loadMvpModule()
